# flower-store

./: .flaskenv  .gitignore  Procfile  README.md  dev-requirements.txt  dev_fns.py  pyproject.toml  requirements.txt  run.py  supabase_populate.py  tailwind.config.js  update_es.py
certs/: cert.pem  key.pem
logs/: flower-shop.log.1  flower-shop.log.10  flower-shop.log.2  flower-shop.log.3  flower-shop.log.4  flower-shop.log.5  flower-shop.log.6  flower-shop.log.7  flower-shop.log.8  flower-shop.log.9
migrations/versions/: 109978c5866d_add_admin_table.py  2b7ce7dc6ae6_users_table.py  5cd1b438f03b_add_bloom_and_height_to_flower.py  7946c54be501_add_price_to_flower.py  83aa792acbc1_flowers_table.py  a40da61c4b75_increase_side_of_image_path.py
src/flower_store/: __init__.py  admin_views.py  cart.py  catalog.py  cli.py  config.py  home.py  models.py  search.py  store.py  utils.py
src/flower_store/admin/: forms.py  routes.py
src/flower_store/admin/templates/: login.html
src/flower_store/auth/: __init__.py  routes.py
src/flower_store/errors/: handlers.py
src/flower_store/static/src/: main.css
src/flower_store/templates/: _flower.html  base.html  cart.html  catalog.html  checkout.html  full_flower.html  home.html  login.html  results.html  search.html  store.html
src/flower_store/templates/admin/: index.html
src/flower_store/templates/errors/: 403.html  404.html  406.html  500.html
tests/: conftest.py  db_test.py  home_test.py  store_test.py
